# Copyright (C) 2004 NetXMS Team <bugs@netxms.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

imagesdir=$(pkgdatadir)/images

images_DATA = \
    generic_printer.ico generic_printer.png \
    interface.ico interface.png \
    network.ico network.png \
    network_service.ico network_service.png \
    node_group.ico node_group.png \
    node.ico node.png \
    service.ico service.png \
    subnet.ico subnet.png \
    template_group.ico template_group.png \
    template.ico template.png \
    template_root.ico template_root.png \
    zone.ico zone.png

EXTRA_DIST=$(images_DATA)
